# twist-your-guts

./: CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  design-brief.md  manual.md  presets.md  research-notes.md
presets/factory/: cabColoredGrind.json  cleanLowLoudTop.json  cutThrough.json  default.json  definitionOnly.json  fuzzWall.json  glueAndGrind.json  subLock.json  throat.json
resources/i18n/: de.txt
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/dsp/: BandEQ.cpp  BandEQ.h  Crossover.cpp  Crossover.h  IRLoader.cpp  IRLoader.h  MidBand.cpp  MidBand.h  NoiseGateStage.cpp  NoiseGateStage.h  ParallelCompressor.cpp  ParallelCompressor.h  PhaseAlignFilter.h  RealtimeCoefficients.h  SplitGap.h  Voicing.cpp  Voicing.h
src/params/: ParameterIds.h  ParameterLayout.cpp  ParameterLayout.h
src/presets/: Localisation.cpp  Localisation.h  PresetBar.cpp  PresetBar.h  PresetManager.cpp  PresetManager.h
tests/: BandEQTests.cpp  ChunkingTests.cpp  CrossoverTests.cpp  GainProcessingTests.cpp  GainStagingTests.cpp  IRLoaderTests.cpp  LatencyTests.cpp  LowBandIsolationTests.cpp  MidBandTests.cpp  NoiseGateTests.cpp  ParallelCompressorTests.cpp  ParameterTests.cpp  PresetManagerTests.cpp  RobustnessTests.cpp  SampleRateAndRobustnessTests.cpp  SplitGapTests.cpp  StateMigrationTests.cpp  StateTests.cpp  ThreeBandFlatSumTests.cpp  TopologyRobustnessTests.cpp  VoicingTests.cpp
